Closed Bug 877110 Opened 11 years ago Closed 11 years ago

format-security errors introduced by bug 867656

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: chrisccoulson, Unassigned)

References

Details

Attachments

(1 file)

Note, we caught this because we build with -Werror=format-security. I guess these must just be warnings on your builds

c++ -o ContentHost.o -c -I../../dist/stl_wrappers -I../../dist/system_wrappers -include /build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/./config/gcc_hidden.h -DIMPL_THEBES -DMOZ_GLUE_IN_PROGRAM -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES  -DSTATIC_EXPORTABLE_JS_API -DNO_NSPR_10_SUPPORT -DEXCLUDE_SKIA_DEPENDENCIES  -DOS_POSIX=1 -DOS_LINUX=1  -I/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/./ipc/chromium/src -I/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/./ipc/glue -I../../ipc/ipdl/_ipdlheaders  -I/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/./content/events/src -I/frameworks/base/include/media/stagefright -I/frameworks/base/include/media/stagefright/openmax -I/frameworks/av/include/media/stagefright -I/frameworks/native/include/media/openmax  -I/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/gfx/layers -I. -I../../dist/include  -I/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/obj-x86_64-linux-gnu/dist/include/nspr -I/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/obj-x86_64-linux-gnu/dist/include/nss      -fPIC -D_FORTIFY_SOURCE=2 -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Wtype-limits -Wempty-body -Wsign-compare -Wno-invalid-offsetof -Wcast-align -g -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -std=gnu++0x -pthread -pipe  -DNDEBUG -DTRIMMED -g -Os -freorder-blocks  -fno-omit-frame-pointer  -I/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/obj-x86_64-linux-gnu/dist/include/cairo  -I/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/./widget/gtk2/compat -pthread -I/usr/include/gtk-2.0 -I/usr/lib/x86_64-linux-gnu/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12 -I/usr/include/gtk-unix-print-2.0    -D_FORTIFY_SOURCE=2 -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MP -MF .deps/ContentHost.o.pp  /build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/gfx/layers/composite/ContentHost.cpp
In file included from /build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/gfx/layers/composite/ContentHost.cpp:6:0:
../../dist/include/CompositableHost.h:153:16: warning: 'virtual void mozilla::layers::CompositableHost::EnsureTextureHost(mozilla::layers::ISurfaceAllocator*, const mozilla::layers::TextureInfo&, const nsIntRect&)' was hidden [-Woverloaded-virtual]
../../dist/include/mozilla/layers/ContentHost.h:154:16: warning:   by 'virtual void mozilla::layers::ContentHostDoubleBuffered::EnsureTextureHost(mozilla::layers::TextureIdentifier, const mozilla::layers::SurfaceDescriptor&, mozilla::layers::ISurfaceAllocator*, const mozilla::layers::TextureInfo&)' [-Woverloaded-virtual]
../../dist/include/CompositableHost.h:153:16: warning: 'virtual void mozilla::layers::CompositableHost::EnsureTextureHost(mozilla::layers::ISurfaceAllocator*, const mozilla::layers::TextureInfo&, const nsIntRect&)' was hidden [-Woverloaded-virtual]
../../dist/include/mozilla/layers/ContentHost.h:195:16: warning:   by 'virtual void mozilla::layers::ContentHostSingleBuffered::EnsureTextureHost(mozilla::layers::TextureIdentifier, const mozilla::layers::SurfaceDescriptor&, mozilla::layers::ISurfaceAllocator*, const mozilla::layers::TextureInfo&)' [-Woverloaded-virtual]
/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/gfx/layers/composite/ContentHost.cpp: In member function 'virtual void mozilla::layers::ContentHostBase::Dump(FILE*, const char*, bool)':
/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/gfx/layers/composite/ContentHost.cpp:222:27: error: format not a string literal and no format arguments [-Werror=format-security]
/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/gfx/layers/composite/ContentHost.cpp:228:27: error: format not a string literal and no format arguments [-Werror=format-security]
/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/gfx/layers/composite/ContentHost.cpp: In member function 'virtual void mozilla::layers::ContentHostDoubleBuffered::Dump(FILE*, const char*, bool)':
/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/gfx/layers/composite/ContentHost.cpp:739:27: error: format not a string literal and no format arguments [-Werror=format-security]
/build/buildd/firefox-trunk-24.0~a1~hg20130529r133185/gfx/layers/composite/ContentHost.cpp:745:27: error: format not a string literal and no format arguments [-Werror=format-security]
cc1plus: some warnings being treated as errors

The attached patch should fix those
Attachment #755270 - Flags: review?(matt.woodrow)
Blocks: 867656
Attachment #755270 - Flags: review?(matt.woodrow) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/c711779d7be6
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: