Bug 877110 - Fix format-security errors introduced by bug 867656. r=mattwoodrow